			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2623 2004/06/09 15:52:57 suz Exp $

<200406>
2004-06-09  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/pim6sd/mld6_proto.[ch], mld6v2.[ch], mld6v2_proto.[ch]:
	- transmits MLDv2 Group-Specific Query, if necessary.
	- doesn't increment MLD statistics counter when an MLD packet 
	  is not transmitted by some reason.

2004-06-08  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/pim6sd/mld6_proto.c, mld6v2_proto.c:
	- accepts MLDv2 Group-Specific Query
	- specifies MLDv2 filter_mode based on the received MLDv2 report type

	* kame/pimsd/mld6_proto.[ch], mld6v2_proto.c:
	decides the MLD-compat-mode based on an arriving MLDv1/v2 packet.

	* kame/pimsd/mld6_proto.[ch], mld6v2.c, mld6v2_proto.[ch]:
	When pim6sd receives a MLDv1 done from an interface, it advertises 
	a group-specific Query in MLDv2 unless the interface is configured
	only with MLDv1.  This is to prevent MLDv2 hosts from shifting to
	MLDv1-compatible-mode unnecessarily.

2004-06-08  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* freebsd4/sys/net/rtsock.c: FreeBSD Security Advisory: 
	FreeBSD-SA-04:12.jailroute

2004-06-07  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/pim6sd/mld6v2_proto.c: discard ALLOW_NEW_SOURCES without 
	any source in MLDv1 compat mode, since it's a meaningless MLDv2-REPORT.

2004-06-06  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/pim6sd/mld6.c: discard MLDv2 packets with hoplimit != 1
	(draft-vida-mld-v2-08.txt section 6.2 mandates it, although 
	RFC2710 does not explicitly mention it).

2004-06-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_input.c (ip6_savecontrol): do not check
	the current process or thread in the input path.  It is
	unnecessary and can even prohibit a legitimate process from
	getting the information.

<200405>
2004-05-31  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/mld6v2_proto.c: MLDv2 bug fixes:
	 - recognizes source list in CHANGE_TO_INCLUDE_MODE report.